[project]
name = "jobber-mcp"
version = "0.1.0"
description = "MCP server exposing Jobber's GraphQL API"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27",
    "aiosqlite>=0.21",
]

[project.scripts]
jobber-mcp = "jobber_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
